update package description

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "booty-grid",
-    "description": "Added functionality to twitters bootstrap grid.",
+    "description": "Extended functionality to twitters bootstrap grid.",
     "version": "0.0.1",
     "keywords": [
         "bootstrap",
