--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "booty-grid",
     "description": "Extended functionality to twitters bootstrap grid.",
     "version": "0.0.2",
+    "main" : "index.js",
     "keywords": [
         "bootstrap",
         "table",
