--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "underscore": "1.6.0",
-    "jqueryify": "2.0.3",
     "stand-in-order": "0.0.2",
-    "elephant-ears": "0.0.2"
+    "elephant-ears": "0.0.2",
+    "jquery": "^2.1.0"
   },
   "devDependencies": {
     "mocha": "1.18.0",
@@ -28,7 +28,8 @@
     "jsdom": "~0.8.10",
     "sinon": "~1.9.0",
     "grunt-contrib-connect": "~0.7.1",
-    "grunt-watchify": "~0.1.0"
+    "grunt-watchify": "~0.1.0",
+    "grunt-contrib-less": "^0.11.0"
   },
   "scripts": {
     "test": "NODE_PATH=lib grunt test"
