--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "booty-grid",
   "description": "Extended functionality to twitters bootstrap grid.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "main": "index.js",
   "keywords": [
     "bootstrap",
@@ -13,9 +13,9 @@
     "url": "https://github.com/skinnybrit51/booty-grid"
   },
   "dependencies": {
-    "underscore": "1.6.0",
-    "stand-in-order": "0.0.2",
-    "elephant-ears": "0.0.2",
+    "underscore": "^1.6.0",
+    "stand-in-order": "^0.0.2",
+    "elephant-ears": "^0.0.2",
     "jquery": "^2.1.0"
   },
   "devDependencies": {
