--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "booty-grid",
     "description": "Extended functionality to twitters bootstrap grid.",
-    "version": "0.0.13",
+    "version": "0.0.14",
     "main": "index.js",
     "keywords": [
         "bootstrap",
@@ -15,7 +15,7 @@
     "dependencies": {
         "underscore": "^1.6.0",
         "stand-in-order": "^0.0.2",
-        "elephant-ears": "^0.0.2",
+        "elephant-ears": "^0.0.3",
         "jquery": "^2.1.0"
     },
     "devDependencies": {
@@ -29,7 +29,8 @@
         "sinon": "~1.9.0",
         "grunt-contrib-connect": "~0.7.1",
         "grunt-watchify": "~0.1.0",
-        "grunt-contrib-less": "^0.11.0"
+        "grunt-contrib-less": "^0.11.0",
+        "grunt-contrib-watch": "^0.6.1"
     },
     "scripts": {
         "test": "NODE_PATH=lib grunt test"
