--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
     "name": "booty-grid",
-    "description": "Grid based off bootstrap table styles.",
-    "version": "0.1.20",
+    "description": "Bootstrap table with CRUD functionality.",
+    "version": "0.1.21",
     "main": "index.js",
     "keywords": [
         "bootstrap",
+        "CRUD",
         "table",
-        "grid"
+        "grid",
+        "add",
+        "delete",
+        "update",
+        "sorting",
+        "links",
+        "row selection"
     ],
     "repository": {
         "type": "git",
