pass column id through event booty-new-row-value-changed

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dependencies": {
         "underscore": "^1.6.0",
         "stand-in-order": "^0.0.5",
-        "elephant-ears": "^0.0.3",
+        "elephant-ears": "1.0.6",
         "jquery": "^2.1.1",
         "booty-datepicker": "0.0.9"
     },
