--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_deploy: "grunt build"
 deploy:
     provider: s3
     bucket: "skinnybrit51.com"
-    upload-dir: "booty-grid"
+    upload-dir: "editable-grid"
     skip_cleanup: true
     secret_access_key:
         secure: zDiuEZgn1THVJyvqE4FcKXPXY/Aozy2gm1gHDkHCooVoZuRtU31tz1N6zWp3yVJ3JZFk4zDO7zyWGjtAba5ydh8FNOl+F/L0RVpYfiSpoiJA7PZlXAw1WKPiyY21luCctZeJc/eZry8ZseM190Q+UzbiqLLjtteO1CHeZo3XptM=
