--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "booty-grid",
+    "name": "editable-grid",
     "description": "Bootstrap table with CRUD functionality.",
-    "version": "1.0.32",
+    "version": "2.0.00",
     "main": "index.js",
     "keywords": [
         "bootstrap",
@@ -20,7 +20,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/skinnybrit51/booty-grid"
+        "url": "https://github.com/skinnybrit51/editable-grid"
     },
     "dependencies": {
         "underscore": "^1.6.0",
@@ -31,11 +31,11 @@
     },
     "devDependencies": {
         "moment": "2.7.0",
-        "mocha": "1.18.0",
-        "chai": "1.9.0",
-        "grunt": "~0.4.2",
-        "grunt-cli": "0.1.11",
-        "grunt-simple-mocha": "~0.4.0",
+        "mocha": "2.4.5",
+        "chai": "3.5.0",
+        "grunt": "0.4.5",
+        "grunt-cli": "0.1.13",
+        "grunt-simple-mocha": "0.4.1",
         "grunt-jshint2": "~2.4.4",
         "jsdom": "~0.8.10",
         "sinon": "~1.9.0",
