--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     },
     "devDependencies": {
         "moment": "2.7.0",
-        "mocha": "2.4.5",
-        "chai": "3.5.0",
-        "grunt": "0.4.5",
-        "grunt-cli": "0.1.13",
-        "grunt-simple-mocha": "0.4.1",
+        "mocha": "1.18.0",
+        "chai": "1.9.0",
+        "grunt": "~0.4.2",
+        "grunt-cli": "0.1.11",
+        "grunt-simple-mocha": "~0.4.0",
         "grunt-jshint2": "~2.4.4",
         "jsdom": "~0.8.10",
         "sinon": "~1.9.0",
